--- a/index.css
+++ b/index.css
@@ -76,6 +76,7 @@ footer {
 * {
   box-sizing: border-box;
 }
+
 body {
   width: 100vw;
   height: 100vh;
@@ -126,6 +127,7 @@ body {
   width: 100%;
   height: 100%;
   color: black;
+  font-weight: 700;
 }
 
 #active {
@@ -163,6 +165,16 @@ p {
   line-height: 20px;
 }
 
+#content {
+  margin: 0 auto;
+}
+
+#introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #avatar {
   width: 150px;
   height: 150px;
@@ -187,7 +199,6 @@ p {
   transform: scale(3);
   transition: all 0.5s ease-in-out;
   overflow: visible;
-  z-index: 1;
 }
 
 .imagecontainer {
@@ -204,8 +215,6 @@ p {
   text-align: right;
   font-size: 14px;
 }
-
-
 
 footer {
   padding: 10px;
